--- a/Project_sem_3/Views/MotorInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MotorInsurance/Order.cshtml
@@ -43,7 +43,7 @@
                                                     <th scope="col">
                                                         MotorOwner
                                                     </th>
-                                                    <th scope="col">Address on vehicle registration</th>
+                                                    <th scope="col">Address registration</th>
                                                     <th scope="col">LicensePlate</th>
                                                     <th scope="col">ChassisNumber</th>
                                                     <th scope="col">Duration of insurance</th>
@@ -538,7 +538,7 @@
 
     .app-checkbox input:checked, .app-checkbox input:not(:checked) {
         position: absolute;
-        left: 91px;
+        left: 13px;
         background-color: white;
         top: -4px;
     }
