add migrate , edit template

--- a/Project_sem_3/Views/MedicalInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MedicalInsurance/Order.cshtml
@@ -793,7 +793,8 @@
                                         <div _ngcontent-c5="" class="benefit-icon">
                                             <i _ngcontent-c5="" class="icon icon-benefit icon-benefit-shield"></i>
                                         </div>
-                                        <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image: url('https://cdn.hsbc.com.vn/content/dam/hsbc/hbvn/images/21-9/HSBC_MCI_1240X400.jpg')">
+                                        <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.22) 100%),
+ url('https://cdn.hsbc.com.vn/content/dam/hsbc/hbvn/images/21-9/HSBC_MCI_1240X400.jpg')">
                                             <div _ngcontent-c5="" class="benefit-name-wrapper v-middle">
                                                 <h2 _ngcontent-c5="" class="benefit-name">
                                                     <div _ngcontent-c5="" class="app-checkbox agree-with-term">
