--- a/Project_sem_3/Views/HomeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/HomeInsurance/Order.cshtml
@@ -40,7 +40,8 @@
                                                     <div _ngcontent-c5="" class="benefit-icon">
                                                         <i _ngcontent-c5="" class="icon icon-benefit icon-benefit-shield"></i>
                                                     </div>
-                                                    <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image: url('https://thumbs.dreamstime.com/b/property-insurance-cardboard-house-miniature-hands-property-insurance-small-cardboard-house-miniature-hands-142689555.jpg')">
+                                                    <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.22) 100%),
+ url('https://thumbs.dreamstime.com/b/property-insurance-cardboard-house-miniature-hands-property-insurance-small-cardboard-house-miniature-hands-142689555.jpg')">
                                                         <div _ngcontent-c5="" class="benefit-name-wrapper v-middle">
                                                             <h2 _ngcontent-c5="" class="benefit-name">
                                                                 <div _ngcontent-c5="" class="app-checkbox agree-with-term">
