--- a/Project_sem_3/Views/MotorInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MotorInsurance/Order.cshtml
@@ -112,7 +112,8 @@
                                                 <div _ngcontent-c5="" class="benefit-icon">
                                                     <i _ngcontent-c5="" class="icon icon-benefit icon-benefit-shield"></i>
                                                 </div>
-                                                <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image: url('https://seenbyyou.com/wp-content/uploads/2019/10/modern-motorbike-insurance-service-company-logo-vector-13496017-735x400.jpg')">
+                                                <div _ngcontent-c5="" class="benefit-image full-cover" style="background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.37) 0%, rgba(0, 0, 0, 0.22) 100%),
+ url('https://www.bennetts.co.uk/-/media/bikesocial/2019-august-images/uk-tracks-guide/cadwell-(1).ashx?h=493&w=740&la=en&hash=74B61E83CA91B386609F7AD25BAF41EFC015C3A6')">
                                                     <div _ngcontent-c5="" class="benefit-name-wrapper v-middle">
                                                         <h2 _ngcontent-c5="" class="benefit-name">
                                                             <div _ngcontent-c5="" class="app-checkbox agree-with-term">
@@ -707,7 +708,7 @@
     .banner {
         width: 100%;
         height: 600px;
-        background-image: url("/Content/dummy/Motor_Order.jpeg");
+        background-image: url("https://www.axa.ie/images/product/motorcycle-handlebars-banner.jpg");
         background-position: center center;
         background-size: cover;
     }
