--- a/Project_sem_3/Views/LifeInsurance/Order.cshtml
+++ b/Project_sem_3/Views/LifeInsurance/Order.cshtml
@@ -178,7 +178,7 @@
 
                     <div class="form-group col-md-7">
                         <label class="col-form-label">PhoneNumber</label>
-                        <input type="text" class="form-control" id="exampleInputPhoneNumber" autocomplete="off" placeholder="PhoneNumber">
+                        <input type="text" name="phone" class="form-control" id="exampleInputPhoneNumber" autocomplete="off" placeholder="PhoneNumber">
                     </div>
 
                     <div class="form-group col-md-5">
@@ -1272,7 +1272,7 @@
                         required: "Please enter a valid name",
                         minlength: "Your name is too short, please enter again"
                     },
-                    PhoneNumber: {
+                    phone: {
                         required: " Please enter a valid Phone Number",
                         minlength: "Your phone is not correct",
                     },
